--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "cron": "^1.3.0",
     "dotenv": "^5.0.1",
-    "google-home-notifier": "^1.2.0",
+    "google-home-notifier": "git+https://github.com/keyiiiii/google-home-notifier.git",
     "node-cron": "^1.2.1",
     "time": "^0.12.0"
   }
